// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TriggerSuccessMessage should disable button after click 1`] = `
<div
  className="u-ta-center"
>
  <img
    alt="triggerSuccessMessage.figure.alt"
    src="file-mock"
  />
  <h2>
    triggerSuccessMessage.title
  </h2>
  <p
    className="u-ta-left"
  >
    triggerSuccessMessage.description
  </p>
  <DefaultButton
    disabled={true}
    label="triggerSuccessMessage.button.label"
    onClick={[Function]}
  />
</div>
`;

exports[`TriggerSuccessMessage should render 1`] = `
<div
  className="u-ta-center"
>
  <img
    alt="triggerSuccessMessage.figure.alt"
    src="file-mock"
  />
  <h2>
    triggerSuccessMessage.title
  </h2>
  <p
    className="u-ta-left"
  >
    triggerSuccessMessage.description
  </p>
  <DefaultButton
    disabled={false}
    label="triggerSuccessMessage.button.label"
    onClick={[Function]}
  />
</div>
`;
